k8s/ingress/url-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-ingress
  namespace: url-dev

spec:
  ingressClassName: nginx

  rules:
  - host: url.local
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-svc
            port:
              number: 5000

      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
